[package]
name = "macroassembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
tinyvec = { version = "1.6", features = ["alloc"] }
libc = "0.2"
iced-x86 = { version = "1.13", features = ["decoder", "no_std", "gas"], default-features = false }
parking_lot = "0.12"
once_cell = "1.17"
num-traits = "0.2"
errno = "0.3"

[dev-dependencies]
pico-args = "0.5"