[package]
name = "macroassembler"
version = "0.1.0"
edition = "2021"
authors = ["Adel Prokurov <adel.prokurov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for writing portable x86-64/riscv64/aarch64 assembly code in Rust"
repository = "https://github.com/playxe/masm-rs"
readme = "README.md"
keywords = ["jit", "assembler", "codegen"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
tinyvec = { version = "1.6", features = ["alloc"] }
libc = "0.2"
jit-allocator = "0.2.8"
parking_lot = "0.12"
once_cell = "1.17"
num-traits = "0.2"
paste = "1.0"
errno = "0.3"
num = "0.4"
capstone = "0.11"
[target.'cfg(target_arch="x86_64")'.dependencies]
iced-x86 = { version = "1.13", features = ["decoder", "no_std", "gas"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
] }

[dev-dependencies]
pico-args = "0.5"
